### Add cache system on the UCB plugin to reduce the IO. (HEAD -> main)
>Wed, 17 Mar 2021 16:15:32 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add tutorial/data in .gitignore
>Tue, 16 Mar 2021 16:48:37 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### trying to fix webpage
>Tue, 16 Mar 2021 10:22:51 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Remove old script
>Tue, 16 Mar 2021 02:44:32 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add reference to gh-pages
>Tue, 16 Mar 2021 02:32:34 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Clean up
>Tue, 16 Mar 2021 01:42:54 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Avoid to access multiple time to the same file => improve IO performances
>Tue, 16 Mar 2021 01:34:05 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix problem with logger
>Tue, 16 Mar 2021 01:32:08 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### learning to use the makefile :)
>Mon, 15 Mar 2021 15:45:41 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### adding time-evolving posteriors to ucb example
>Mon, 15 Mar 2021 15:37:40 -0500
