@@ -1,0 +1,3 @@
+twine==3.4.1
+gitchangelog==3.0.4
+
